Fix heading width on mobile

--- a/themes/shiro/assets/src/sass/blocks/_home-page-hero.scss
+++ b/themes/shiro/assets/src/sass/blocks/_home-page-hero.scss
@@ -49,7 +49,7 @@
 	}
 
 	&__heading-color {
-		width: 454px;
+		max-width: 454px;
 		margin-top: 4rem;
 	}
 
